# agent-skills

./: README.md
auto-bug-fixer/: SKILL.md
docs/: tutorials.md
docs/design/: repository-design.md
skills/ascendc-operator-code-gen/: SKILL.md
skills/ascendc-operator-compile-debug/: SKILL.md
skills/ascendc-operator-compile-debug/example/AddCustom/test/: CMakeLists.txt  test_aclnn_add_custom.cpp
skills/ascendc-operator-design/: SKILL.md
skills/ascendc-operator-dev/: SKILL.md
skills/ascendc-operator-doc-gen/: SKILL.md
skills/ascendc-operator-frame-adapter-torch/: SKILL.md
skills/ascendc-operator-kernel-code-gen/: SKILL.md
skills/ascendc-operator-precision-eval/: SKILL.md  ct_tool-0.3.1-py3-none-any.whl
skills/ascendc-operator-project-init/: SKILL.md
skills/ascendc-operator-tiling-code-gen/: SKILL.md
skills/cann-installer/: SKILL.md
skills/catlass-module-import/: SKILL.md
skills/catlass-operator-code-gen/: SKILL.md
skills/catlass-operator-design/: SKILL.md
skills/catlass-operator-dev/: SKILL.md
skills/catlass-operator-performance-optim/: SKILL.md
skills/security-code-review/: SKILL.md
skills/simple-vector-triton-gpu-to-npu/: SKILL.md
skills/triton-operator-code-gen/: SKILL.md
skills/triton-operator-code-review/: SKILL.md
skills/triton-operator-design/: SKILL.md
skills/triton-operator-dev/: SKILL.md
skills/triton-operator-doc-gen/: SKILL.md
skills/triton-operator-env-config/: SKILL.md
skills/triton-operator-performance-eval/: SKILL.md
skills/triton-operator-performance-optim/: SKILL.md
skills/triton-operator-precision-eval/: SKILL.md
(+82 files in other folders)
